updated socials, books, repos

--- a/_posts/2025-06-23-text.md
+++ b/_posts/2025-06-23-text.md
@@ -7,9 +7,8 @@ tags: formatting charts
 categories: sample-posts
 ---
 
-This is an example post with some text. I think it's important to smoothen out the blog writing process so I don't spend a lot of time before/after writing up a post. It should be seamless - as smooth as clicking Publish on WordPress or Wix.
-
-Currently waiting for Docker to get up running.
-
-Another test - does writing a new post automatically display it on the blog page?
-
+First few steps after you make your al-folio website - 
+set up your personal info in _config.yml
+update socials in socials.yml
+clean up nav bar and decide which menu items to display
+set up which github user and repos to show on repositories page
