blog, course updates

--- a/_posts/2025-06-23-text.md
+++ b/_posts/2025-06-23-text.md
@@ -2,13 +2,14 @@
 layout: post
 title: First Post
 date: 2025-06-23 14:24:00
-description: testing a brand new post
+description: a brand new post
 tags: formatting charts
 categories: sample-posts
+featured: true
 ---
 
 First few steps after you make your al-folio website - 
-set up your personal info in _config.yml
-update socials in socials.yml
-clean up nav bar and decide which menu items to display
-set up which github user and repos to show on repositories page
+- set up your personal info in _config.yml
+- update socials in socials.yml
+- clean up nav bar and decide which menu items to display
+- set up which github user and repos to show on repositories page
