track Gemfile.lock to fix bundler issues

--- a/_posts/2025-06-23-text.md
+++ b/_posts/2025-06-23-text.md
@@ -3,9 +3,9 @@ layout: post
 title: First Post
 date: 2025-06-23 14:24:00
 description: a brand new post
-tags: formatting charts
-categories: sample-posts
-featured: true
+tags: general
+categories: general
+featured: false
 ---
 
 First few steps after you make your al-folio website - 
