new post and some clean up

--- a/_posts/2025-06-23-text.md
+++ b/_posts/2025-06-23-text.md
@@ -13,3 +13,6 @@ First few steps after you make your al-folio website -
 - update socials in socials.yml
 - clean up nav bar and decide which menu items to display
 - set up which github user and repos to show on repositories page
+- clean up readme_preview images
+- clean up audio, video in assets
+- modify tags that show up on the blog page using display_tags in config.yml
