--- a/_posts/2025-07-08-text.md
+++ b/_posts/2025-07-08-text.md
@@ -8,5 +8,5 @@ categories: academic
 featured: true
 ---
 
-In the era of ChatGPT and other AI models that allow you to get an answer to almost any question, let's take a step back and rethink our ML model choice before just doing an *API call to yet another model*. 
+In the era of ChatGPT and other Generative AI models that allow you to get an answer to almost any question, let's take a step back and rethink our model choice before just doing an *API call to yet another LLM*. 
 
