--- a/_posts/2025-06-23-text.md
+++ b/_posts/2025-06-23-text.md
@@ -2,7 +2,7 @@
 layout: post
 title: First Post
 date: 2025-06-23 14:24:00
-description: a brand new post
+description: setting up your website
 tags: general
 categories: general
 featured: false
